force-app/main/default/objects/Retail_Live_Email__c/Retail_Live_Email__c.object-meta.xml
<CustomObject>
    <label>Retail LIVE</label>
    <nameField>
        <label>Retail LIVE Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retail LIVE</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>