force-app/main/default/objects/Retail_Live_Email__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <label>Body</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>