force-app/main/default/objects/Retail_Live_Email__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <length>100</length>
    <type>Text</type>
</CustomField>