force-app/main/default/objects/Retail_Live_Email__c/fields/Brand_Reference__c.field-meta.xml
<CustomField>
    <fullName>Brand_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand Reference</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>VR_Tweets</relationshipName>
    <type>Lookup</type>
</CustomField>