force-app/main/default/objects/Retail_Live_Email__c/fields/ccAddresses__c.field-meta.xml
<CustomField>
    <fullName>ccAddresses__c</fullName>
    <label>ccAddresses</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>