force-app/main/default/objects/Retail_Live_Email__c/fields/Chatter_Post_Id__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Post_Id__c</fullName>
    <description>Id of associated chatter group posting.</description>
    <label>Chatter Post Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>