force-app/main/default/objects/Retail_Live_Email__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <inlineHelpText>Set on creation by User default</inlineHelpText>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Visual Merchandising</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>