force-app/main/default/objects/Retail_Live_Email__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <label>From</label>
    <length>100</length>
    <type>Text</type>
</CustomField>