force-app/main/default/objects/Retail_Live_Email__c/fields/Guid__c.field-meta.xml
<CustomField>
    <fullName>Guid__c</fullName>
    <label>Guid</label>
    <length>40</length>
    <type>Text</type>
</CustomField>