force-app/main/default/objects/Retail_Live_Email__c/fields/Owner_in_Same_Team__c.field-meta.xml
<CustomField>
    <fullName>Owner_in_Same_Team__c</fullName>
    <description>Identifies whether record owner has the same role as the currently logged in user (useful for report filters)</description>
    <formula>IF(Owner:User.UserRoleId =  $UserRole.Id, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifies whether record owner has the same role as the currently logged in user (useful for report filters)</inlineHelpText>
    <label>Owner in Same Team</label>
    <type>Checkbox</type>
</CustomField>