force-app/main/default/objects/Retail_Live_Email__c/fields/Possible_Reply__c.field-meta.xml
<CustomField>
    <fullName>Possible_Reply__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether communique could be a reply to another Retail LIVE. This is based on the subject containing email reply/forwarding attributes (eg. Fwd, Re ..etc)</description>
    <inlineHelpText>Indicates whether communique could be a reply to another Retail LIVE. This is based on the subject containing email reply/forwarding attributes (eg. Fwd, Re ..etc)</inlineHelpText>
    <label>Possible Reply</label>
    <type>Checkbox</type>
</CustomField>