force-app/main/default/objects/Retail_Live_Email__c/fields/Reply_Count__c.field-meta.xml
<CustomField>
    <fullName>Reply_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>incremented by 1 when an EMAIL reply comes in. Will not count internal posts</description>
    <label>Reply Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>