force-app/main/default/objects/Retail_Live_Email__c/fields/Reply_Received__c.field-meta.xml
<CustomField>
    <fullName>Reply_Received__c</fullName>
    <formula>IF(Reply_Count__c &gt; 0, &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reply Received</label>
    <type>Text</type>
</CustomField>