force-app/main/default/objects/Retail_Live_Email__c/fields/Sent_from_App__c.field-meta.xml
<CustomField>
    <fullName>Sent_from_App__c</fullName>
    <formula>IF( CONTAINS(Message_Id__c  , &quot;@sfdc.net&gt;&quot;), true, false )</formula>
    <label>Sent from App</label>
    <type>Checkbox</type>
</CustomField>