force-app/main/default/objects/Retail_Live_Email__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>