force-app/main/default/objects/Retail_Live_Email__c/fields/Subject_Unique__c.field-meta.xml
<CustomField>
    <fullName>Subject_Unique__c</fullName>
    <label>Subject Unique</label>
    <length>255</length>
    <type>Text</type>
</CustomField>