force-app/main/default/objects/Retail_Live_Email__c/fields/ToAddress__c.field-meta.xml
<CustomField>
    <fullName>ToAddress__c</fullName>
    <label>ToAddress</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>