force-app/main/default/objects/Retail_Live_Email__c/fields/Village__c.field-meta.xml
<CustomField>
    <fullName>Village__c</fullName>
    <label>Village</label>
    <length>55</length>
    <type>Text</type>
</CustomField>