force-app/main/default/objects/Retail_Live_Email__c/fields/Village_Presence__c.field-meta.xml
<CustomField>
    <fullName>Village_Presence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Village Presence</label>
    <referenceTo>Village_Presence__c</referenceTo>
    <relationshipLabel>Retail LIVE</relationshipLabel>
    <relationshipName>Retail_LIVE</relationshipName>
    <type>Lookup</type>
</CustomField>