force-app/main/default/objects/Retail_Live_Email__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Village__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Reply_Count__c</columns>
    <columns>Sent_from_App__c</columns>
    <columns>Reply_Received__c</columns>
    <columns>Brand_Reference__c</columns>
    <columns>Department__c</columns>
    <columns>From__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>