force-app/main/default/objects/Retail_Live_Email__c/listViews/Emails_that_need_linking.listView-meta.xml
<ListView>
    <fullName>Emails_that_need_linking</fullName>
    <booleanFilter>1 or 2 or 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Brand__c</columns>
    <columns>Brand_Reference__c</columns>
    <columns>Village__c</columns>
    <columns>Department__c</columns>
    <columns>From__c</columns>
    <columns>Sent_from_App__c</columns>
    <columns>Reply_Count__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Brand_Reference__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Village__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Department__c</field>
        <operation>equals</operation>
    </filters>
    <label>Emails that need linking</label>
    <language>en_US</language>
</ListView>