force-app/main/default/objects/Retail_Live_Email__c/listViews/Kildare.listView-meta.xml
<ListView>
    <fullName>Kildare</fullName>
    <columns>NAME</columns>
    <columns>Reply_Count__c</columns>
    <columns>Reply_Received__c</columns>
    <columns>Brand_Reference__c</columns>
    <columns>Department__c</columns>
    <columns>Village__c</columns>
    <columns>From__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Village__c</field>
        <operation>equals</operation>
        <value>KV</value>
    </filters>
    <label>Kildare</label>
    <language>en_US</language>
</ListView>