force-app/main/default/objects/Retail_Live_Email__c/listViews/My_Retail_LIVE_emails.listView-meta.xml
<ListView>
    <fullName>My_Retail_LIVE_emails</fullName>
    <columns>Subject__c</columns>
    <columns>NAME</columns>
    <columns>Reply_Count__c</columns>
    <columns>Brand_Reference__c</columns>
    <columns>Department__c</columns>
    <columns>Village__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>My Retail LIVE emails</label>
    <language>en_US</language>
</ListView>